@@ -1,9 +1,6 @@
 package io.transwarp.streamgui.config;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 /**
  * Author: stk
@@ -15,13 +12,13 @@ public enum Column {
     City("城市名称", null, null),
     Email("邮箱", null, null),
     Gender("性别", null, null),
-    IDCard("身份证号", List.of("开始日期(yyyyMMdd)", "结束日期(yyyyMMdd)"), List.of("19500101", "20101231")),
+    IDCard("身份证号", Arrays.asList("开始日期(yyyyMMdd)", "结束日期(yyyyMMdd)"), Arrays.asList("19500101", "20101231")),
     Name("姓名", null, null),
     Nation("民族", null, null),
     PhoneNumber("手机号码", null, null),
-    RegexString("正则字符串", List.of("正则表达式"), List.of("[a-zA-Z0-9]{5,10}")),
+    RegexString("正则字符串", Collections.singletonList("正则表达式"), Collections.singletonList("[a-zA-Z0-9]{5,10}")),
     SafeInfo("外汇局代码", null, null),
-    Timestamp("时间", List.of("格式", "开始时间", "结束时间"), List.of("yyyy/MM/dd HH:mm:ss", "1980/01/01 00:00:00", "2015/12/31 23:59:59"));
+    Timestamp("时间", Arrays.asList("格式", "开始时间", "结束时间"), Arrays.asList("yyyy/MM/dd HH:mm:ss", "1980/01/01 00:00:00", "2015/12/31 23:59:59"));
     private static Map<String, Column> map;
 
     static {
